# memri-cursor-hackathon

./: .gitignore  README.md  RUNNING.md
memri-app/: .env  Cargo.toml  memri-config.toml  memri.db
memri-app/apps/backend/: Cargo.toml
memri-app/apps/backend/src/: main.rs
memri-app/crates/capture/: Cargo.toml
memri-app/crates/capture/src/: change_detection.rs  lib.rs  monitor.rs  platform.rs  window_capture.rs
memri-app/crates/config/: Cargo.toml
memri-app/crates/config/src/: file_loader.rs  lib.rs
memri-app/crates/ocr/: Cargo.toml
memri-app/crates/ocr/src/: lib.rs
memri-app/crates/storage/: Cargo.toml
memri-app/crates/storage/src/: lib.rs
memri-frontend/: DESIGN_COMPARISON.md  EDEN_DESIGN_IMPLEMENTATION.md  TIMELINE_IMPLEMENTATION.md  TIMELINE_STYLING_UPDATE.md  package-lock.json  package.json  styleguide.md
memri-frontend/app/: constants.ts  globals.css  input-bar.tsx  page.tsx  timeline.tsx  ui.tsx
memri-frontend/app/components/: capture-preview.tsx  chat-panel.tsx  clip-reference.tsx  header.tsx  index.ts
memri-frontend/app/workflows/: page.tsx
