[package]
name = "memri_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
memri_config = { path = "../../crates/config" }
memri_capture = { path = "../../crates/capture" }
memri_ocr = { path = "../../crates/ocr" }
memri_storage = { path = "../../crates/storage" }
axum = { version = "0.7", features = ["macros", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower-http = { version = "0.6", features = ["cors"] }
