[package]
name = "memri_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
memri_config = { path = "../config" }
serde = { version = "1", features = ["derive"] }
